--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 
 
   .post-container {
+    min-width: 502px;
     max-width: 600px;
     margin: 20px auto;
     background-color: #fff;
@@ -117,3 +118,8 @@ input.images {
   height: 45px;
   
 }
+
+.text{
+  cursor: pointer;
+}
+
